# pydantic-vs-marshmallow-dataclasses

./: .gitignore  README.MD  pyproject.toml
pydantic_vs_marshmallow_dataclasses/: common.py  my_marshmallow.py  my_marshmallow_over_pydantic.py  my_pydantic.py
